# ProjectSteve

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  VERSION  manifest.json
Assets/Models/: Hand.blend  HandPix.blend  IceBear.blend  PitBase.blend  SpacerCube.blend  Wall.blend  Web.blend  dna.blend  hand_shape.blend  stevelet.blend  syringe.blend  tablet.blend  windtunnel.blend
Assets/Models/Room/: Attic1.blend  CustomRoom.blend  Mech_Room.blend  room.blend  table.blend  table.fbx
Assets/Shaders/: AllInOne.hlsl  CompileShaders.bat  PostProcessing.hlsl  Shaders.json
Assets/Sprites/: Fire.pyxel  Flag.pyxel  FlagAnimation.pyxel  FlagAnimationwithStevlet.pyxel  HandsPix.pyxel  Milk.pyxel  Pit.pyxel  Play.pyxel  Pyxel2DBlob.pyxel  TitleScreen.pyxel  Wind.pyxel  syringe.pyxel
Assets/Sprites/Stevelette/: genCharackterSheet.py  generate.py
Other/: RunPancake-macOS.sh  RunPancake-windows.bat  RunWithOculus-windows.bat  RunWithSteamVR-macOS.sh  RunWithSteamVR-windows.bat  RunWithSteamVRAndPreview-macOS.sh  icon.icns
Other/android-buildsystem/: gradle.properties
Other/android-buildsystem/app/: build.gradle
Other/android-buildsystem/app/src/debug/: AndroidManifest.xml
Other/android-buildsystem/app/src/main/: AndroidManifest.xml
Resources/: settings.json
Resources/models/: HandsPix.dds  Pyxel2DBlob_Idle.dds  cow.sgm  dna.sgm  dna_blubb.sgm  hand.sgm  obstacle_empty.sgm  obstacle_pit.sgm  obstacle_wall.sgm  obstacle_web.sgm  obstacle_web_collision.sgm  obstacle_windtunnel.sgm  room.sgm  room_details.sgm  room_mech.sgm  stevelet.sgm  syringe_body.sgm  syringe_fluid.sgm  syringe_pump.sgm  table.sgm  tablet.sgm
Resources/shaders/: AllInOne.ps.0.metallib  AllInOne.ps.0.spirv  AllInOne.ps.1.metallib  AllInOne.ps.1.spirv  AllInOne.ps.10.cso  AllInOne.ps.10.metallib  AllInOne.ps.10.spirv  AllInOne.ps.100.cso  AllInOne.ps.100.metallib  AllInOne.ps.101.metallib  AllInOne.ps.102.metallib  AllInOne.ps.103.metallib  AllInOne.ps.104.metallib  AllInOne.ps.105.cso  AllInOne.ps.105.metallib  AllInOne.ps.106.cso  AllInOne.ps.106.metallib  AllInOne.ps.106.spirv  AllInOne.ps.107.metallib  AllInOne.ps.108.metallib  AllInOne.ps.109.metallib  AllInOne.ps.11.cso  AllInOne.ps.11.metallib  AllInOne.ps.11.spirv  AllInOne.ps.110.metallib  AllInOne.ps.111.metallib  AllInOne.ps.112.metallib  AllInOne.ps.113.metallib  AllInOne.ps.113.spirv  AllInOne.ps.114.metallib  AllInOne.ps.114.spirv  AllInOne.ps.115.metallib  AllInOne.ps.116.metallib  AllInOne.ps.117.metallib  AllInOne.ps.118.metallib  AllInOne.ps.118.spirv  AllInOne.ps.119.metallib  AllInOne.ps.12.cso  AllInOne.ps.12.metallib  AllInOne.ps.12.spirv  (+1121 more)
Resources/sprites/: stevelet.sgm
Resources/sprites/stevelet/: stevelet.sgm
Scripts/: Bootstrap.py  BuildProject.py  CreateBuildProject.py  CreateRelease.py  SubmitRelease_Oculus.py  SubmitRelease_Steam.py  SubmitRelease_itchio.py  Utilities.py  app_build_919730_Linux64.vdf  app_build_919730_MacOS.vdf  app_build_919730_Win64.vdf  depot_build_919731_Win64.vdf  depot_build_919732_MacOS.vdf  depot_build_919733_Linux64.vdf
Sources/: PSAnimatable.cpp  PSAnimatable.h  PSApplication.cpp  PSApplication.h  PSEffect.h  PSEffects.cpp  PSEffects.h  PSGrabbable.cpp  PSGrabbable.h  PSHelix.cpp  PSHelix.h  PSIPad.cpp  PSIPad.h  PSLevel.cpp  PSLevel.h  PSObstacle.cpp  PSObstacle.h  PSPlatformWrapper.cpp  PSPlatformWrapper.h  PSPlayer.cpp  PSPlayer.h  PSSpawner.cpp  PSSpawner.h  PSSteveStats.cpp  PSSteveStats.h  PSStevelet.cpp  PSStevelet.h  PSSyringe.cpp  PSSyringe.h  PSWorld.cpp  PSWorld.h  main.cpp
